HttpUnit release notes

Known problems:
    1. The "accept-charset" attribute for forms is ignored; the page content character set is used to encode any response.
       This behavior matches that currently used by IE and Navigator.

Limitations:
    1. JDK 1.2 or higher is required
    2. JavaScript support does not include document.write and some DOM properties


Revision History:
21-Oct-2002
Problems fixed:
    1. The cookie fixes of 17-Oct had caused ServletUnit to see multiple servlets in an application with varying paths
       as being in separate sessions.
    2. ServletUnit now explicitly specifies its locale for generating dates as Locale.US to comply with RFC-1123

17-Oct-2002
Additions:
    1. Cookies are now restricted by their origin server, rather than being sent on every request.
    2. A new package com.meterware.httpunit.cookies, now exists to support the cookie functionality.

14-Oct-2002
Acknowledgements:
    Thanks to Stefan Renz for describing the correct way to set up proxy servers in Java 2 and later.
Additions:
    1. The proxy server may now be specified by calling WebClient.setProxyServer. This should also ensure that the
       correct authorization header is sent.

Problems fixed:
    1. Requests created by calling the web request constructors directly, rather than being derived from an HTML page
       were always using the Latin-1 encoding, rather than the user-specified default encoding.

13-Oct-2002
Notes:
    1. The NekoHTML parser is now supported. If it is present in the classpath, it will be used in preference to JTidy.
       Note that NekoHTML is a much more forgiving parser than JTidy, properly handling a lot of bad HTML that JTidy
       cannot. In addition, the Document class that NekoHTML creates is of type HTMLDocument. On the other hand,
       the HTMLErrorListener is not currently supporting the NekoHTML parser, although such support will be added if