@@ -10,6 +10,16 @@ Limitations:
 
 
 Revision History:
+22-Oct-22
+Problems fixed:
+    1. A bad certificate on an https connection was incorrectly being flagged as a no-such-server exception. This
+       is fixed on JDK 1.4, due to a correct in the JDK. On previous versions of the JDK, HttpUnit is using a
+       workaround, which cannot detect the difference.
+
+Notes:
+    1. The exception HttpServerNotFoundException has been removed. When no server is found, HttpUnit now throws the
+       standard exception: java.net.UnknownHostException
+
 21-Oct-2002
 Problems fixed:
     1. The cookie fixes of 17-Oct had caused ServletUnit to see multiple servlets in an application with varying paths
